--- a/projects/web/src/app/admin/nav-items/detail/detail.component.html
+++ b/projects/web/src/app/admin/nav-items/detail/detail.component.html
@@ -2,15 +2,15 @@
 <nz-card class="ant-card-data-detail m-0" [nzTitle]="title" [nzExtra]="toolsTpl"
   [nzActions]="editable ? [okTpl, cancelTpl] : []">
   <ng-template #toolsTpl>
-    <nz-space-compact>
+    <nz-space-compact nzSize="small">
       @if (user.privileges['app_nav_items.update'] && editable) {
         <button type="button" nz-button nzType="primary"
           (click)="save()" [disabled]="!detailForm.valid">
-          <svg-icon class="me-1" iconPath="bi/check" /> 保存
+          <nz-icon nzType="check" /> 保存
         </button>
       }
       <button type="button" nz-button nzType="default" (click)="cancel()">
-        <svg-icon class="me-1" iconPath="bi/x" /> 取消
+        <nz-icon nzType="close" /> 取消
       </button>
     </nz-space-compact>
   </ng-template>
@@ -103,7 +103,7 @@
               @if (editable && user.privileges['app_storages.read_folder_content']) {
                 <button class="px-2" type="button" nz-button nzType="default" nzSearch
                   nz-tooltip="从图标库查找图标" (click)="showIconDialog()">
-                  <svg-icon iconPath="bi/search" />
+                  <nz-icon nzType="search" />
                 </button>
               }
             </ng-template>
@@ -145,13 +145,13 @@
     @if (user.privileges['app_nav_items.update'] && editable) {
       <button class="float-start ms-4" type="button" nz-button nzType="primary"
         (click)="save()" [disabled]="!detailForm.valid">
-        <svg-icon class="me-1" iconPath="bi/check" /> 保存
+        <nz-icon nzType="check" /> 保存
       </button>
     }
   </ng-template>
   <ng-template #cancelTpl>
     <button class="float-end me-4" type="button" nz-button nzType="default" (click)="cancel()">
-      <svg-icon class="me-1" iconPath="bi/x" /> 取消
+      <nz-icon nzType="close" /> 取消
     </button>
   </ng-template>
 </nz-card>
